--- a/index/templates/index/post_list.html
+++ b/index/templates/index/post_list.html
@@ -1,17 +1,14 @@
-<html>
-    <head>
-        <title>CBI homepage</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href='/'>CBI homepage: index page</a></h1>
-        </div>
-        {% for post in posts %}
-            <div>
+{% extends 'index/base.html' %}
+{% load markdownify %}
+
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
                 <p>published: {{ post.published_date }}</p>
-                <h1><a href="">{{ post.title }}</a></h1>
-                <p>{{ post.text|linebreaksbr }}</p>
             </div>
-        {% endfor %}
-    </body>
-</html>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text| markdown | safe| truncatewords:"100" }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
