--- a/index/static/css/md.css
+++ b/index/static/css/md.css
@@ -1,7 +1,7 @@
 .highlight code, .highlight pre {
     color:#fdce93;
     background-color:#3f3f3f; 
-    padding: .5em 1em
+    padding: .5em 1em;
 }
 .highlight .hll {
     background-color:#222
