--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -11,24 +11,41 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css">
 
         <!-- Bootstrap CSS -->
-        <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
-        <link rel="stylesheet" href="{% static 'css/index.css' %}">
-        <link rel="stylesheet" href="{% static 'css/md.css' %}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
         <!-- Syntax HighLighter V4-->
         <link href="{% static 'css/theme.css' %}" rel="stylesheet" type="text/css">
         <script src="{% static 'js/syntaxhighlighter.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/syntaxhighlighter.js.map' %}" type="text/javascript"></script>
+
+        <!-- Custom css -->
+        <link rel="stylesheet" href="{% static 'css/md.css' %}">
+        <link rel="stylesheet" href="{% static 'css/index.css' %}">
         <title>CBI homepage</title>
     </head>
     <body>
-        <div class="page-header">
-            <h1><a href='/'>CBI homepage: index page</a></h1>
+        <div class="logo-box">
+            <a href="http://www.snuh.org/intro.do">
+                <img class="logo" src="{% static 'images/logo.png' %}">
+            </a>
         </div>
+        <div class="page-header">
+            <h1><a href='/'>Division of Clinical Bioinformatics</a></h1>
+        </div>
+
+        <nav class="navbar navbar-expand-lg navbar-custom">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Links</a>
+            </li>
+          </ul>
+        </nav>
 
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-32">
                     {% block content %}
                     {% endblock %}
                 </div>
