--- a/index/templates/index/post_list.html
+++ b/index/templates/index/post_list.html
@@ -3,12 +3,11 @@
 
 {% block content %}
     {% for post in posts %}
-        <div class="post">
-            <div class="date">
-                <p>published: {{ post.published_date }}</p>
-            </div>
+        <div class="post post-list">
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text| markdown | safe| truncatewords:"100" }}</p>
+            <div class="date">
+                <p>published: {{ post.published_date }} by <a class="author">{{ post.author }}</a></p>
+            </div>
         </div>
     {% endfor %}
 {% endblock %}
